--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
 Isiaka Ibrahim <iiadeyemi307@gmail.com>
-Sodiq Babawale <@gmail.com>
+Sodiq Babawale <babawalesodiq996@gmail.com>
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
