--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
 Isiaka Ibrahim <iiadeyemi307@gmail.com>
-Sodiq Babawale <@gmail.com>
+Sodiq Babawale <sodiqbabawale996@gmail.com>
